--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -1375,8 +1374,10 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:139::;
+allow 2a0e:6a80:3:160::;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1439,7 +1440,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.212.148.78;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1482,7 +1482,6 @@ allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.33.20.42;
-allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1500,6 +1499,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.82.121.227;
 allow 45.82.121.246;
+allow 45.82.122.143;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.219;
@@ -1571,6 +1571,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.196.145.95;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1637,6 +1638,7 @@ allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1695,6 +1697,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.39;
 allow 91.219.237.56;
