--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -570,8 +570,10 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
+deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:139::;
+deny 2a0e:6a80:3:160::;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
