Update lists at 20240601-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -37,6 +36,7 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.181.245.162;
@@ -207,6 +207,7 @@ allow 176.118.193.33;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
+allow 176.97.114.252;
 allow 178.162.209.56;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -847,7 +848,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 207.188.141.102;
 allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -874,8 +874,11 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
+allow 23.137.248.139;
 allow 23.137.250.34;
+allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
@@ -934,7 +937,10 @@ allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::91;
+allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
@@ -1487,6 +1493,7 @@ allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.33.20.42;
+allow 45.56.104.167;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1579,7 +1586,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.158.18.10;
+allow 54.210.202.178;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
