--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -277,7 +277,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.148.3.217;
 allow 185.14.97.37;
 allow 185.153.197.227;
@@ -621,6 +620,7 @@ allow 192.42.116.28;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.124.22.98;
 allow 193.168.141.173;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -848,6 +848,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 207.188.141.102;
 allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -908,7 +909,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -929,10 +929,10 @@ allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1162,7 +1162,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1188,7 +1187,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1437,6 +1435,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.226.1.59;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1503,6 +1502,7 @@ allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
+allow 45.79.144.222;
 allow 45.79.170.82;
 allow 45.79.177.21;
 allow 45.79.50.161;
@@ -1559,7 +1559,6 @@ allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
-allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1586,7 +1585,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.210.202.178;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
