--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -277,7 +277,6 @@ deny 185.130.47.58;
 deny 185.141.147.128;
 deny 185.142.239.49;
 deny 185.146.232.234;
-deny 185.146.232.243;
 deny 185.148.3.217;
 deny 185.14.97.37;
 deny 185.153.197.227;
@@ -621,6 +620,7 @@ deny 192.42.116.28;
 deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.124.22.98;
 deny 193.168.141.173;
 deny 193.189.100.194;
 deny 193.189.100.195;
@@ -848,6 +848,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
+deny 207.188.141.102;
 deny 209.135.168.56;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -908,7 +909,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -929,10 +929,10 @@ deny 2.58.95.35;
 deny 2.58.95.38;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
+deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1162,7 +1162,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1188,7 +1187,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -1437,6 +1435,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.226.1.59;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1503,6 +1502,7 @@ deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
 deny 45.66.35.35;
+deny 45.79.144.222;
 deny 45.79.170.82;
 deny 45.79.177.21;
 deny 45.79.50.161;
@@ -1559,7 +1559,6 @@ deny 5.255.100.126;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
-deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1586,7 +1585,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.210.202.178;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
