--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -153,7 +154,6 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
-allow 151.216.65.100;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
@@ -193,7 +193,6 @@ allow 172.104.214.41;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.232.164.52;
-allow 172.233.108.234;
 allow 172.234.33.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -816,6 +815,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1080,7 +1080,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e02::f03c:94ff:fe88:6fd4;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1437,7 +1436,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.215.222.177;
+allow 34.225.134.15;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1458,10 +1457,12 @@ allow 45.128.232.151;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
+allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
 allow 45.138.16.151;
 allow 45.138.16.203;
+allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.240;
 allow 45.138.16.249;
