--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 100.28.178.23;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 103.109.101.105;
@@ -100,7 +101,6 @@ deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
-deny 107.21.250.145;
 deny 108.181.124.143;
 deny 108.181.27.205;
 deny 108.181.69.243;
@@ -141,6 +141,7 @@ deny 142.44.234.69;
 deny 143.110.156.176;
 deny 144.172.118.4;
 deny 144.172.118.55;
+deny 144.172.118.76;
 deny 144.172.73.11;
 deny 144.172.73.6;
 deny 144.217.80.80;
@@ -261,6 +262,7 @@ deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.117.215.9;
+deny 185.126.117.21;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -910,6 +912,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -934,6 +937,7 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1163,7 +1167,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1558,7 +1561,6 @@ deny 5.255.100.126;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
-deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
