--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,6 +130,7 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
+deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
