--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -200,7 +199,7 @@ allow 172.234.33.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
-allow 172.81.131.156;
+allow 172.81.132.94;
 allow 173.230.142.131;
 allow 173.232.195.137;
 allow 173.232.195.144;
@@ -259,6 +258,9 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
+allow 185.107.57.64;
+allow 185.107.57.65;
+allow 185.107.57.66;
 allow 185.107.70.56;
 allow 185.112.144.11;
 allow 185.112.146.167;
@@ -918,6 +920,7 @@ allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
+allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -944,6 +947,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
+allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -1445,6 +1449,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.224.47.78;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1458,7 +1463,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.195.123.229;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1657,12 +1661,12 @@ allow 82.153.138.24;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
