--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -215,6 +215,7 @@ deny 178.162.209.56;
 deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
+deny 178.17.171.118;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.131.141;
@@ -1084,6 +1085,7 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:99::d348;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c506::1;
@@ -1566,6 +1568,7 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.201.13.63;
 deny 5.255.100.126;
 deny 5.255.100.219;
 deny 5.255.100.224;
@@ -1593,7 +1596,6 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
-deny 52.70.104.120;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
