--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -215,6 +215,7 @@ allow 178.162.209.56;
 allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
+allow 178.17.171.118;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.131.141;
@@ -1084,6 +1085,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
@@ -1566,6 +1568,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.201.13.63;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
@@ -1593,7 +1596,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.70.104.120;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
