Update lists at 20240604-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.80.192;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -72,7 +73,6 @@ allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
-allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
@@ -642,6 +642,7 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
+allow 193.218.118.160;
 allow 193.218.118.178;
 allow 193.218.118.181;
 allow 193.218.118.182;
@@ -682,7 +683,6 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.166.157;
-allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
 allow 198.98.48.20;
@@ -863,7 +863,6 @@ allow 209.141.37.94;
 allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1043,7 +1042,6 @@ allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
-allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
@@ -1428,6 +1426,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1568,7 +1567,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.201.13.63;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
