--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -226,7 +226,6 @@ allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
-allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
@@ -610,6 +609,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
