Update lists at 20240605-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -125,7 +125,6 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -255,6 +254,7 @@ deny 2620:7:6001::186;
 deny 2620:7:6001::187;
 deny 2620:7:6001::188;
 deny 2800:ba0:6:c1::4858;
+deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
