--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -125,7 +125,6 @@ allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -255,6 +254,7 @@ allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
