--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.28.143.188;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 103.109.101.105;
@@ -6,7 +5,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -916,7 +914,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -942,7 +939,6 @@ set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1073,6 +1069,7 @@ set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -1597,6 +1594,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.236.99.190;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
