--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.28.181.82;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 103.109.101.105;
@@ -214,7 +213,6 @@ deny 176.58.100.98;
 deny 176.97.114.202;
 deny 176.97.114.252;
 deny 178.162.209.56;
-deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.171.118;
@@ -341,7 +339,18 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.13;
@@ -487,6 +496,10 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -814,6 +827,7 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 201.23.12.101;
+deny 201.23.14.225;
 deny 201.23.16.249;
 deny 202.182.99.129;
 deny 202.61.226.98;
@@ -1070,7 +1084,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
-deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:99::d348;
@@ -1084,6 +1097,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e02::f03c:94ff:fe88:6fd4;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
@@ -1364,6 +1378,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1425,6 +1454,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.197.120.192;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1516,11 +1546,11 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
-deny 50.116.60.12;
 deny 50.3.182.133;
 deny 50.3.182.156;
 deny 51.15.249.160;
