Update lists at 20240607-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -251,7 +251,6 @@ allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:f530:8002::19;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
@@ -267,6 +266,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:78::3b85;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
