--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -251,7 +251,6 @@ deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:f530:8002::19;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
 deny 2620:7:6001::186;
@@ -267,6 +266,7 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:78::3b85;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:99::d348;
 deny 2a00:99a0:0:1000::2;
