--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -557,6 +556,7 @@ allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.86.148.90;
 allow 188.165.200.97;
+allow 188.172.228.41;
 allow 188.172.229.15;
 allow 188.214.104.21;
 allow 188.244.106.81;
@@ -878,6 +878,7 @@ allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
+allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -1069,6 +1070,7 @@ allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:f530:8002::19;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
@@ -1132,6 +1134,7 @@ allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:94e0:2421:dead::1;
@@ -1219,6 +1222,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
+allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1455,9 +1459,9 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.225.192.182;
 allow 35.0.127.52;
 allow 37.1.201.144;
+allow 37.120.190.85;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1469,6 +1473,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.221.101.223;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1552,6 +1557,7 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
+allow 50.116.60.12;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
