Update lists at 20240607-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -891,6 +891,7 @@ deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
 deny 23.137.253.9;
+deny 23.152.24.77;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
@@ -917,6 +918,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -943,6 +945,7 @@ deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1455,6 +1458,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.237.7.119;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1475,6 +1479,7 @@ deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.135.132.20;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.142;
@@ -1549,7 +1554,6 @@ deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
-deny 46.41.150.103;
 deny 50.116.60.12;
 deny 50.3.182.133;
 deny 50.3.182.156;
@@ -1602,7 +1606,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.204.237.101;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
