--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -891,6 +891,7 @@ allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
+allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -917,6 +918,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -943,6 +945,7 @@ allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1455,6 +1458,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.237.7.119;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1475,6 +1479,7 @@ allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
@@ -1549,7 +1554,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 46.41.150.103;
 allow 50.116.60.12;
 allow 50.3.182.133;
 allow 50.3.182.156;
@@ -1602,7 +1606,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.204.237.101;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
