Update lists at 20240608-1800

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -27,10 +27,6 @@ set_real_ip_from 2001:620:20d0::20;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
-set_real_ip_from 2001:678:e3c::a;
-set_real_ip_from 2001:678:e3c::b;
-set_real_ip_from 2001:678:e3c::c;
-set_real_ip_from 2001:678:e3c::d;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -194,7 +190,15 @@ set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
+set_real_ip_from 2605:6400:30:f174:1:1:1:1;
+set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
+set_real_ip_from 2605:6400:30:f174::42;
+set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
+set_real_ip_from 2605:6400:30:f174:42:42:42:42;
+set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -362,6 +366,7 @@ set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
+set_real_ip_from 2a04:9dc0:31::c0cc:73;
 set_real_ip_from 2a04:9dc0:31::c0cc:78;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
