--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -172,6 +172,7 @@ set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
+set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
 set_real_ip_from 171.25.193.20;
@@ -221,7 +222,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.31.35.47;
+set_real_ip_from 178.31.36.226;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -685,6 +686,7 @@ set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
 set_real_ip_from 198.98.52.24;
+set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
 set_real_ip_from 199.195.248.184;
@@ -848,6 +850,7 @@ set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.38.110;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.50.178;
 set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
@@ -902,7 +905,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -929,7 +931,6 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -952,6 +953,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
+set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
@@ -971,6 +973,7 @@ set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
+set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
@@ -1049,6 +1052,7 @@ set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
+set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
@@ -1440,7 +1444,6 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.205.244.97;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1536,6 +1539,7 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
 set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.166.174;
+set_real_ip_from 51.222.136.218;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
 set_real_ip_from 51.38.113.118;
@@ -1578,6 +1582,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.227.109.112;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
