--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -170,6 +171,7 @@ allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
+allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
@@ -194,7 +196,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 173.230.142.131;
-allow 173.249.57.253;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -246,7 +247,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.57.64;
@@ -704,6 +704,7 @@ allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
+allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
@@ -900,6 +901,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -926,6 +928,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1057,7 +1060,6 @@ allow 2620:7:6001::185;
 allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
-allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
@@ -1088,7 +1090,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1419,7 +1420,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1437,7 +1437,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.222.134.23;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1576,6 +1575,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.204.213.56;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1702,7 +1702,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
-allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
