--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -170,6 +171,7 @@ set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
+set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
@@ -194,7 +196,6 @@ set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 173.230.142.131;
-set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
@@ -246,7 +247,6 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
-set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.57.64;
@@ -704,6 +704,7 @@ set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
+set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
@@ -900,6 +901,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -926,6 +928,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1057,7 +1060,6 @@ set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
 set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
-set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
@@ -1088,7 +1090,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1419,7 +1420,6 @@ set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
-set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1437,7 +1437,6 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.222.134.23;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1576,6 +1575,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.204.213.56;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1702,7 +1702,6 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
-set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
